--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "../sass/utils/overlay";
 
 @import "../sass/components/header";
+@import "../sass/components/mobile-menu";
 @import "../sass/components/header_logo";
 @import "../sass/components/header_links";
 @import "../sass/components/header_contact";
