--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,28 +3,17 @@
 @import "../sass/utils/vars";
 @import "../sass/utils/container";
 @import "../sass/utils/is-hidden";
-@import "../sass/utils/purchase__backdrop";
-@import "../sass/utils/modal";
-@import "../sass/utils/buttons";
-@import "../sass/utils/social_icons";
-@import "../sass/utils/wrapper";
-@import "../sass/utils/overlay";
 
 @import "../sass/components/header";
-@import "../sass/components/mobile-menu";
-@import "../sass/components/header_logo";
-@import "../sass/components/header_links";
-@import "../sass/components/header_contact";
 @import "../sass/components/purchase";
-@import "../sass/components/purchase__modal__form";
 @import "../sass/components/values";
 @import "../sass/components/activities";
 @import "../sass/components/team";
 @import "../sass/components/customers";
 @import "../sass/components/footer";
-@import "../sass/components/footer_logo";
-@import "../sass/components/footer_social";
-@import "../sass/components/footer_contact";
-@import "../sass/components/footer_newsletter";
-@import "../sass/components/portfolio__buttons";
-@import "../sass/components/portfolio_main";
+@import "../sass/components/portfolio";
+@import "../sass/components/buttons";
+@import "../sass/components/modal";
+@import "../sass/components/overlay";
+@import "../sass/components/purchase__backdrop";
+@import "../sass/components/social_icons";
