mobile-menu work in progress

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "../sass/utils/is-hidden";
 
 @import "../sass/components/header";
+@import "../sass/components/mobile-menu";
 @import "../sass/components/purchase";
 @import "../sass/components/values";
 @import "../sass/components/activities";
