--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -9,7 +9,7 @@
   left: 0px;
   top: 0px;
 
-  background: #ffffff;
+  background: var(--main-white);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
   z-index: 2;
