--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -8,7 +8,6 @@
   height: 100vh;
   left: 0px;
   top: 0px;
-
   background: var(--main-white);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -16,21 +15,73 @@
 }
 
 .mobile-menu__button {
-  position: relative;
+  width: 18px;
+  height: 18px;
+  position: absolute;
   top: 27px;
   right: 25px;
   z-index: 2;
 }
 
-.mobile-menu__links {
+.mobile-menu__links li {
+  padding-left: 40px;
+  padding-top: 0;
+}
+
+.mobile-menu__links-agency {
+  display: block;
+  text-decoration: none;
+  font-style: normal;
   font-weight: 500;
   font-size: 40px;
   line-height: 47px;
-  text-align: center;
+  padding-bottom: 36px;
   letter-spacing: 0.02em;
   color: var(--black-main);
-  list-style-type: none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &--active {
+    color: var(--main-blue);
+  }
+}
+
+.mobile-menu__links-portfolio {
+  display: block;
   text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  padding-bottom: 36px;
+
+  letter-spacing: 0.02em;
+  color: var(--black-main);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &--active {
+    color: var(--main-blue);
+  }
+}
+
+.mobile-menu__links-contact {
+  display: block;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  padding-bottom: 36px;
+
+  letter-spacing: 0.02em;
+  color: var(--black-main);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &--active {
+    color: var(--main-blue);
+  }
 }
 
 // .mobile-menu__content {
