--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -25,7 +25,7 @@
 
 .mobile-menu__links li {
   padding-left: 40px;
-  padding-top: 0;
+  padding-top: 48px;
 }
 
 .mobile-menu__links-agency {
@@ -41,10 +41,16 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  &--active {
-    color: var(--main-blue);
+  // &--active {
+  //   color: var(--main-blue);
+  // }
+
+  // &::after {
+  //   content: "";
+  //   color: var(--main-blue);
+  // }
   }
-}
+
 
 .mobile-menu__links-portfolio {
   display: block;
