--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -19,6 +19,19 @@
   fill: var(--black-main);
   border: 0;
   background-color: var(--main-white);
+
+}
+
+@media (min-width: 768px) {
+  .mobile-menu__button-open {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .mobile-menu__button-open {
+    display: none;
+  }
 }
 
 .mobile-menu__button-close {
@@ -28,6 +41,18 @@
   fill: var(--black-main);
   border: 0;
   background-color: var(--main-white);
+}
+
+@media (min-width: 768px) {
+  .mobile-menu__button-close {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .mobile-menu__button-close {
+    display: none;
+  }
 }
 
 .mobile-menu__links {
@@ -83,10 +108,12 @@
 }
 
 .mobile-menu__contact {
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   padding-left: 40px;
   height: 100px;
+  align-content: space-between;
 }
 
 .mobile-menu__contact-element-phone {
@@ -96,7 +123,6 @@
   font-size: 34px;
   line-height: 40px;
   letter-spacing: 0.02em;
-  padding-bottom: 32px;
 }
 
 .mobile-menu__contact-element-mail {
@@ -106,4 +132,23 @@
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.02em;
+}
+
+.mobile-menu__social {
+  padding-left: 30px;
+  margin-top: 64px;
+  display: flex;
+  list-style: none;
+}
+
+.mobile-menu__social-item {
+  text-decoration: none;
+  color: var(--main-blue);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  padding-right: 10px;
+  padding-left: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
