--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -17,15 +17,18 @@
   }
 }
 
-.header__content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+@media (min-width: 768px) {
+  .header__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 @media (min-width: 1200px) {
   .header__content {
     display: flex;
+    justify-content: flex-start;
     align-items: center;
   }
 }
@@ -87,6 +90,7 @@
 
 @media (min-width: 1200px) {
   .header__links {
+    padding-left: 93px;
     display: flex;
     // gap: 46px;
     list-style-type: none;
@@ -193,6 +197,7 @@
 
 @media (min-width: 1200px) {
   .header__contact {
+    padding-left: 345px;
     line-height: 0.875;
     display: flex;
     list-style-type: none;
@@ -231,11 +236,13 @@
     &:focus {
       fill: var(--main-blue);
       color: var(--main-blue);
-
-      &--transformation {
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-      }
     }
+  }
+  &--transformation {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__contact-element svg {
+    padding-right: 8px;
   }
 }
