--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -244,10 +244,10 @@
   }
 }
 
-.header__contact-element svg {
-  padding-right: 8px;
-}
+// .header__contact-element svg {
+//   padding-right: 8px;
+// }
 
-.header__contact-icon {
-  padding-right: 8px;
-}
+// .header__contact-icon {
+//   padding-right: 8px;
+// }
