--- a/sass/components/_purchase__backdrop.scss
+++ b/sass/components/_purchase__backdrop.scss
@@ -8,7 +8,7 @@
   background: rgba(0, 0, 0, 0.2);
   width: 100vw;
   height: 100vh;
-  transition: scale(1);
+  transform: scale(1);
   transition-duration: 1s;
   transition-timing-function: ease;
 }
