--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -92,7 +92,6 @@
   .header__links {
     padding-left: 93px;
     display: flex;
-    // gap: 46px;
     list-style-type: none;
     line-height: 0.875;
     align-items: center;
@@ -183,7 +182,7 @@
 
 .header__contact {
   display: none;
-  height: 100%;
+  // height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -197,12 +196,11 @@
 
 @media (min-width: 1200px) {
   .header__contact {
-    padding-left: 345px;
     line-height: 0.875;
-    display: flex;
+    // display: flex;
     list-style-type: none;
     gap: 30px;
-    align-items: center;
+    // align-items: center;
   }
 }
 
@@ -243,4 +241,3 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-
