--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -236,8 +236,8 @@
       color: var(--main-blue);
     }
   }
-  &--transformation {
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  // &--transformation {
+  //   transition-duration: 250ms;
+  //   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  // }
 }
