--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -67,39 +67,16 @@
 @media (min-width: 1200px) {
   .header__logo {
     font-size: 26px;
+    line-height: 31px;
   }
 }
 
 .header__logo-web {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
   color: var(--main-blue);
 }
 
-@media (min-width: 1200px) {
-  .header__logo-web {
-    font-size: 26px;
-  }
-}
-
 .header__logo-studio {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
   color: var(--second-black);
-}
-
-@media (min-width: 1200px) {
-  .header__logo-studio {
-    font-size: 26px;
-  }
 }
 
 .header__links {
@@ -108,11 +85,17 @@
 
 @media (min-width: 768px) {
   .header__links {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: var(--black-main);
     display: flex;
-    gap: 60px;
     list-style-type: none;
-    line-height: 0.875;
     align-items: center;
+    gap: 60px;
   }
 }
 
@@ -123,13 +106,6 @@
 }
 
 .header__links-agency {
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: var(--black-main);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -155,13 +131,13 @@
 }
 
 .header__links-portfolio {
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: var(--black-main);
+  // text-decoration: none;
+  // font-style: normal;
+  // font-weight: 500;
+  // font-size: 14px;
+  // line-height: 16px;
+  // letter-spacing: 0.02em;
+  // color: var(--black-main);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -193,14 +169,14 @@
 }
 
 .header__links-contact {
-  display: flex;
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: var(--black-main);
+  // display: flex;
+  // text-decoration: none;
+  // font-style: normal;
+  // font-weight: 500;
+  // font-size: 14px;
+  // line-height: 16px;
+  // letter-spacing: 0.02em;
+  // color: var(--black-main);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -218,7 +194,7 @@
 
 .header__contact {
   display: none;
-  // height: 100%;
+ 
 }
 
 @media (min-width: 768px) {
